--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<h1 style="position: absolute; text-align: center; left: 22%; top: 0px;">High School Love On</h1>
 	<p style="position: absolute; text-align: center; left: 22%; top: 42px;"><strong>High School Love on</strong>(Korean: 하이스쿨: 러브온) is a 2014 South Korean television series starring Kim Sae-ron, Nam Woo-hyun and Lee Sung-yeol of the band Infinite.[1][2][3] It aired on KBS2 from July 11 to December 19, 2014 on Fridays at 20:55 for 20 episodes. Hi! School: Love On is a teen fantasy romance series about an angel who has no choice but to become a human after unintentionally saving a male student in danger. The now-mortal angel then interacts with teenage high school students and learns about love, friendship, and what it means to be human.</p>
 	<a href="https://youtu.be/wTcYGLgc6Zc">
-		<img src="lalang.jpg">
+		<img src="jumuad.jpg">
 	</a>
 	<hr style ="position: absolute; left: 22%; width: 73%; top: 200px;">
 	<h2 style=" position: absolute; text-align: justify; left: 22%; top: 200px;">Plot</h2>
